# Snake-Game-Clone

./: README.md
Snake_C++/: CMakeLists.txt
Snake_C++/include/: AssetManager.hpp  Body.hpp  DifficultyMenu.hpp  Drawable.hpp  Food.hpp  Game.hpp  GameMath.hpp  GamePanel.hpp  Help.hpp  HighScore.hpp  Menu.hpp  Pause.hpp  Player.hpp  Poison.hpp  Settings.hpp  Snake.hpp  SnakeMath.hpp  Sound.hpp  State.hpp  StateManager.hpp
Snake_C++/src/Engine/: AssetManager.cpp  Body.cpp  DifficultyMenu.cpp  Food.cpp  Game.cpp  GamePanel.cpp  Help.cpp  HighScore.cpp  Menu.cpp  Pause.cpp  Player.cpp  Poison.cpp  Snake.cpp  Sound.cpp  StateManager.cpp
Snake_C++/src/Math/: GameMath.cpp  SnakeMath.cpp
Snake_Java/src/mathengine/: DisplayMath.java  GameMath.java  SettingsMath.java  SnakeMath.java
Snake_Java/src/physicsengine/: SnakePhysics.java
Snake_Java/src/snake/: AbstractPlayer.java  Body.java  Drawable.java  Food.java  Game.java  GamePanel.java  HighScore.java  Menu.java  Movable.java  Pause.java  Player.java  Poison.java  Settings.java  SoundFx.java
